# HelloSFML

./: CMakeLists.txt  main.cpp
FreePoints-/: Button.cpp  Button.h  CMakeCache.txt  HelloSFML  Makefile  TextBox.cpp  TextBox.h  TranscriptStealer.h  UselessCmake.txt  cmake_install.cmake  main.cpp
FreePoints-/examples/: 00-showcase.cpp  CMakeLists.txt
FreePoints-/include/openai/: CMakeLists.txt
